--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,24 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-02-02 15:37:36 -0500 
+%% Created for Sean Bittner at 2021-02-16 14:38:58 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{o2014cell,
-	author = {O'Leary, Timothy and Williams, Alex H and Franci, Alessio and Marder, Eve},
-	date-added = {2021-02-02 15:37:30 -0500},
-	date-modified = {2021-02-02 15:37:30 -0500},
-	journal = {Neuron},
-	number = {4},
-	pages = {809--821},
-	publisher = {Elsevier},
-	title = {Cell types, network homeostasis, and pathological compensation from a biologically plausible ion channel expression model},
-	volume = {82},
-	year = {2014}}
+@book{sisson2018handbook,
+	author = {Sisson, Scott A and Fan, Yanan and Beaumont, Mark},
+	date-added = {2021-02-16 14:38:54 -0500},
+	date-modified = {2021-02-16 14:38:54 -0500},
+	publisher = {CRC Press},
+	title = {Handbook of approximate Bayesian computation},
+	year = {2018}}
+
+@article{bondanelli2020coding,
+	author = {Bondanelli, Giulio and Ostojic, Srdjan},
+	date-added = {2021-02-02 15:59:27 -0500},
+	date-modified = {2021-02-02 15:59:27 -0500},
+	journal = {PLoS computational biology},
+	number = {2},
+	pages = {e1007655},
+	publisher = {Public Library of Science},
+	title = {Coding with transient trajectories in recurrent neural networks},
+	volume = {16},
+	year = {2020}}
 
 @article{gutenkunst2007universally,
 	author = {Gutenkunst, Ryan N and Waterfall, Joshua J and Casey, Fergal P and Brown, Kevin S and Myers, Christopher R and Sethna, James P},
